--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   <body>
     <ul class="gallery"></ul>
     <script type="module" src="./js/gallery.js"></script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"
+    ></script>
   </body>
 </html>
